--- a/RpiUsbSim.csproj
+++ b/RpiUsbSim.csproj
@@ -10,6 +10,28 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
+    <Folder Include="SSHLoginDialog\SSHHelpDialog\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoClosingMessageBox" Version="1.0.0.7" />
+    <PackageReference Include="Markdig" Version="0.42.0" />
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
